portfolio page is now responsive

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     </header>
  
     <section>
-        <div class="section-content">
+        <div class="section-content portfolio-content">
             <h2>Portfolio</h2>
             
             <div id="portfolio-container">
