--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 </head>
 <body>
-
     <!--Header and Nav Bar-->
     <header>
         <div id="header-container">
@@ -29,7 +28,7 @@
     </header>
    
     <!--About me portion of the page.  Section defines the 960px box, div contains the content-->
-   <section>
+   <section id="about-me-section">
        <div class="section-content">
             <h2>About Me</h2>
             
