adding responsive contact.html page

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     </header>
 
     <section>
-        <div class="section-content">
+        <div class="section-content" id="form-wrapper">
 
             <h2>Contact</h2>
 
